--- a/frontend/my-react-app/src/components/pages/auth/PasswordRequirements.css
+++ b/frontend/my-react-app/src/components/pages/auth/PasswordRequirements.css
@@ -1,9 +1,9 @@
 .password-requirements {
-  background-color: #f9f9f9;
+  background-color:  #a9a9a9;
   padding: 0.4rem;        /* Slightly more than your .07rem but still small */
   border-radius: 4px;
   margin-top: 0.5rem;     /* Moved to top margin instead of bottom */
-  max-width: 280px;       /* Limit the width so it's not too wide */
+  max-width: 300px;       /* Limit the width so it's not too wide */
   border: 1px solid #eee; /* Add a subtle border for clarity */
 }
 
@@ -30,7 +30,7 @@
   color: green;
 }
 .password-requirements li.invalid {
-  color: red;
+  color: #900000;
 }
 
 .password-requirements li svg {
